--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dummy GitHub Pages Site</title>
+  <title>Toggle Test</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <h1 id="title">Hello GitHub Pages 🚀</h1>
-  <p>This is a dummy deploy test.</p>
 
   <button onclick="changeText()">Click me</button>
 
